Enhance description of return value as requested

--- a/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
@@ -11,4 +11,4 @@ Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Ange
 		Die Zeichenkette des gewünschten, auf die Blacklist zu setzenden Alias-Vorschlags.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der gewünschte Alias-Vorschlag erfolgreich auf die Blacklist gesetzt werden konnte, ansonsten falsch.
+Wahr, wenn der gewünschte Alias-Vorschlag erfolgreich auf die Blacklist gesetzt werden konnte oder wenn der Alias-Vorschlag bereits auf die Blacklist gesetzt war, ansonsten falsch.
