Corrected wrong class desciption of search.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -2,9 +2,9 @@
 
 \section{Search}
 \paragraph*{Beschreibung}
-Diese Klasse ermöglicht die Suche nach Gebäuden und Räumen über eine String-Eingabe in einem Textfeld, 
+Diese Klasse ermöglicht die Suche nach Gebäuden und Räumen über eine query 
+und ermöglicht die Bestimmung des Kartenobjekts zu einem gültigen Suchbegriff, 
 dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, ein Alias oder eine Person sein.
-Zeigt eine Liste von Vorschlägen an, falls vorhanden, und ermöglicht es dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
 Die Klasse gehört zu ViewModel.
 
 \subsection{getSuggestions}%$$$M
