--- a/Kapitel/00_Backend/Services/AliasService/addAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/addAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{addAlias(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\subsection{\texttt{addAlias(alias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias zur Datenbank der globalen Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
@@ -11,10 +11,10 @@ Hierfür wird der gewünschte Alias als Zeichenkette als auch die ID des dazugeh
 \begin{itemize}
     \item alias : String
     		\paragraph*{Beschreibung}
-    		Der globale Alias als Zeichenkette, den man entfernen möchte.
+    		Der Alias als Zeichenkette, den man hinzufügen möchte.
     \item mapID : int
     		\paragraph*{Beschreibung}
     		Die ID des Kartenobjekts, für das der globale Alias als Bezeichner dient.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn der gewünschte globale Alias erfolgreich entfernt werden konnte, ansonsten falsch.
+Wahr, wenn der gewünschte globale Alias erfolgreich hinzugefügt werden konnte, ansonsten falsch.
