--- a/Kapitel/00_Backend/QueryResolver/AliasQuery/getAlias_int,UserID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/QueryResolver/AliasQuery/getAlias_int,UserID_ListAlias/main.tex
@@ -1,8 +1,9 @@
-\subsection{\texttt{getAlias(mapID : int, userID : int) : List<Alias> aliases}}%$$$M
+\subsection{\texttt{getAlias(mapID : int, userID : UserID) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurück.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasService}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben.
 Die Methode ermöglicht, dass ein Administrator eine Liste aus allen Aliassen eines Kartenobjekts anfragen kann, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte.
 D.h., durch die Methode erhält man alle Alias-Vorschläge des Benutzers, die bereits von einem Administrator angenommen und somit zu globalen Aliasse verwandelt wurden.
 Hierfür wird die ID des gewünschten Kartenobjekts und die ID des gewünschten Benutzers übergeben.
