Enhance javadoc for method 'getAlias_int_ListAlias'
Enhance javadoc for method
'Kapitel/00_Backend/QueryResolver/AliasQuery/
getAlias_int_ListAlias' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/QueryResolver/AliasQuery/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/QueryResolver/AliasQuery/getAlias_int_ListAlias/main.tex
@@ -3,6 +3,7 @@
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts zurück.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
+Gibt die Anweisung an die Schnittstelle \texttt{AliasService}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben.
 Die Methode ermöglicht, dass ein Administrator eine Liste aus allen Aliassen eines Kartenobjekts anfragen kann.
 Hierfür wird die ID des gewünschten Kartenobjekts übergeben.
 \paragraph*{Parameter}
