Add javadoc for method 'getAlias_int,UserID_ListAlias'
Add javadoc for method
'Kapitel/00_Backend/Services/AliasService/
getAlias_int,UserID_ListAlias' in '/main.tex'
(in the same above mentioned path).

--- a/Kapitel/00_Backend/Services/AliasService/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/main.tex
@@ -2,4 +2,5 @@
 
 \inprelmod{addAlias_String,int_boolean}
 \inprelmod{removeAlias_String,int_boolean}
+\inprelmod{getAlias_int,UserID_ListAlias}
 \inprelmod{getAlias_int_ListAlias}
