Enhance javadoc for methods in 'UserService', 'UserServiceImp'

--- a/Kapitel/00_Backend/Services/UserService/addUser_String_UserID/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/addUser_String_UserID/main.tex
@@ -1,6 +1,6 @@
 \subsubsection{\texttt{addUser(accessToken : String) : UserID}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Nimmt einen Benutzer, der sich authentifiziert hat und noch nicht in die Datenbank aufgenommen wurde, in der Datenbank auf.
+Definiert das Aufnehmen eines Benutzers, der sich authentifiziert hat und noch nicht in die Datenbank aufgenommen wurde, in die Datenbank.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Die Methode ermöglicht, dass ein Administrator einen Benutzer zur Datenbank aus allen Benutzern hinzufügen kann. Hierfür muss der Benutzer sich authentifiziert haben. 
