--- a/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
@@ -1,9 +1,9 @@
 \subsubsection{\texttt{loadUserByToken(accessToken : String) : User}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt den gewünschten Benutzer zurück.
+Definiert das Laden eines gewünschten Benutzers durch einen Access-Token und das anschließende Zurückgeben des entsprechenden Benutzers.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
-Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer zurückbekommen kann. 
+Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer erhalten kann. 
 Ist der Access-Token ungültig, d.h. nicht von einem Benutzer, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
