--- a/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
@@ -1,10 +1,10 @@
 \subsubsection{\texttt{loadUserByToken(accessToken : String) : User}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Gibt den gewünschten Benutzer zurück.
+Ladet den gewünschten Benutzer durch einen Access-Token und gibt ihm anschließend zurück.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{UserService}.
 Die Methode ist ausschließlich von Administratoren aufzurufen.
-Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer zurückbekommen kann. 
+Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer erhalten kann. 
 Ist der Access-Token ungültig, d.h. nicht von einem Benutzer, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
