--- a/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
@@ -1,6 +1,6 @@
 \subsection{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
+Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
