--- a/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
@@ -1,6 +1,6 @@
 \subsection{\texttt{addAlias(alias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, einen Alias zur Datenbank der globalen Aliasse hinzuzufügen.
+Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias zur Datenbank der globalen Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
