Enhance javadocs in package 'Services'
Enhance javadocs in methods of
'AliasServiceImp', 'UserService', 'UserServiceImp'.

--- a/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
@@ -2,6 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias zur Datenbank der globalen Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
+Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{AliasService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator einen Alias zur Datenbank der globalen Aliassen hinzufügen kann.
