--- a/Kapitel/00_Backend/Services/AliasServiceImp/getAliasUpdates_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/getAliasUpdates_int_ListAlias/main.tex
@@ -2,6 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine aktualisierte Liste der Aliasse, die aktuell in der Datenbank hinterlegt sind, zurückzugeben, und gibt es wiederum zurück.
 \paragraph*{Beschreibung}
+Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{AliasService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator nach einer aktualisierten Liste aus den Aliassen fragen und erhalten kann.
