--- a/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
@@ -2,6 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
+Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{AliasService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator eine Liste aus allen Aliassen eines Kartenobjekts anfragen kann.
