--- a/Kapitel/00_Backend/Services/AliasServiceImp/removeAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/removeAlias_String,int_boolean/main.tex
@@ -2,6 +2,7 @@
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen globalen Alias aus der Datenbank zu entfernen.
 \paragraph*{Beschreibung}
+Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{AliasService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator einen globalen Alias aus der Datenbank aus allen globalen Aliassen entfernen kann.
