--- a/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
@@ -2,7 +2,8 @@
 \paragraph*{Kurzbeschreibung}
 Definiert das Laden eines gewünschten Benutzers durch einen Access-Token und das anschließende Zurückgeben des entsprechenden Benutzers.
 \paragraph*{Beschreibung}
-Die Methode ist ausschließlich von Administratoren aufzurufen.
+Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
+Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
 Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer erhalten kann. 
 Ist der Access-Token ungültig, d.h. nicht von einem Benutzer, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
