--- a/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/addAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{addAlias(alias : String, mapID : int) : boolean}}%$$$M
+\subsubsection{\texttt{addAlias(alias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen Alias zur Datenbank der globalen Aliasse hinzuzufügen.
 \paragraph*{Beschreibung}
