--- a/Kapitel/00_Backend/Services/AliasServiceImp/removeAlias_String,int_boolean/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/removeAlias_String,int_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{removeAlias(alias : String, mapID : int) : boolean}}%$$$M
+\subsubsection{\texttt{removeAlias(alias : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, einen globalen Alias aus der Datenbank zu entfernen.
 \paragraph*{Beschreibung}
