--- a/Kapitel/00_Backend/Services/AliasService/getAliasUpdates_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/getAliasUpdates_int_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{getAliasUpdates(version : int) : List<Alias> updatedAliases}}%$$$M
+\subsubsection{\texttt{getAliasUpdates(version : int) : List<Alias> updatedAliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine aktualisierte Liste der Aliasse, die aktuell in der Datenbank hinterlegt sind, zurückzugeben, und gibt es wiederum zurück.
 \paragraph*{Beschreibung}
