--- a/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/main.tex
@@ -4,4 +4,4 @@
 \inprelmod{removeAlias_String,int_boolean}
 \inprelmod{getAlias_int,UserID_ListAlias}
 \inprelmod{getAlias_int_ListAlias}
-\inpremod{getAliasUpdates_int_ListAlias}
+\inprelmod{getAliasUpdates_int_ListAlias}
