Restructure 'Resolvers' in 'Backend'

--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{disapproveAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
+\paragraph{\texttt{disapproveAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Lehnt den gewünschten Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
