--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,UserID,boolean_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/evaluateAliasSuggestion_String,int,UserID,boolean_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, userID : UserID, evaluation : boolean) : boolean}}%$$$M
+\paragraph{\texttt{evaluateAliasSuggestion(aliasSuggestion : String, mapID : int, userID : UserID, evaluation : boolean) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Bewertet den gewünschten Alias-Vorschlag.
 \paragraph*{Beschreibung}
