--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,UserID_boolean/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,UserID_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{suggestAlias(aliasSuggestion : String, mapID : int, userID : UserID) : boolean}}%$$$M
+\paragraph{\texttt{suggestAlias(aliasSuggestion : String, mapID : int, userID : UserID) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Schlägt den gewünschten Alias vor.
 \paragraph*{Beschreibung}
