--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int,UserID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int,UserID_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{getAlias(mapID : int, userID : UserID) : List<Alias> aliases}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int, userID : UserID) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurück.
 \paragraph*{Beschreibung}
