--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_int,int_ListAliasSuggestion/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_int,int_ListAliasSuggestion/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion> aliasSuggestions}}%$$$M
+\paragraph{\texttt{getAliasSuggestions(minValToShowPos : int, minValToShowNeg : int) : List<AliasSuggestion> aliasSuggestions}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Alias-Vorschläge, die die Mindestanzahl von positiven oder negativen Bewertungen erfüllen, zurück.
 \paragraph*{Beschreibung}
