--- a/Kapitel/00_Backend/main.tex
+++ b/Kapitel/00_Backend/main.tex
@@ -6,6 +6,5 @@
 %    \relmermaid[width=13cm]{Klassendiagramm1}
 %\end{figure}
 
-\inprelmod{MutationResolver}
-\inprelmod{QueryResolver}
+\inprelmod{Resolvers}
 \inprelmod{Services}
