--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/main.tex
@@ -1,4 +1,4 @@
-\subsection{AliasMutation}
+\subsubsection{AliasMutation}
 
 \inprelmod{removeAlias_String,int_boolean}
 \inprelmod{blacklistAlias_String_boolean}
