--- a/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Resolvers/QueryResolver/AliasQuery/getAlias_int_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsection{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Aliasse des gewünschten Kartenobjekts zurück.
 \paragraph*{Beschreibung}
