--- a/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int_ListAlias/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
+\paragraph{\texttt{getAlias(mapID : int) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
