--- a/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{loadUserByToken(accessToken : String) : User}}%$$$M
+\paragraph{\texttt{loadUserByToken(accessToken : String) : User}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Ladet den gewünschten Benutzer durch einen Access-Token und gibt ihm anschließend zurück.
 \paragraph*{Beschreibung}
