--- a/Kapitel/00_Backend/Services/UserService/addUser_String_UserID/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/addUser_String_UserID/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{addUser(accessToken : String) : UserID}}%$$$M
+\paragraph{\texttt{addUser(accessToken : String) : UserID}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Definiert das Aufnehmen eines Benutzers, der sich authentifiziert hat und noch nicht in die Datenbank aufgenommen wurde, in die Datenbank.
 \paragraph*{Beschreibung}
