Add javadoc for method 'removeFromBlacklist_String_boolean'
Add javadoc for method
'Kapitel/00_Backend/Resolvers/MutationResolver/
AliasMutation/removeFromBlacklist_String_boolean'
in '/main.tex' (in the same above mentioned path).

--- a/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/main.tex
+++ b/Kapitel/00_Backend/Resolvers/MutationResolver/AliasMutation/main.tex
@@ -2,3 +2,4 @@
 
 \inprelmod{removeAlias_String,int_boolean}
 \inprelmod{blacklistAlias_String_boolean}
+\inprelmod{removeFromBlacklist_String_boolean}
