Fixed as requested

--- a/Kapitel/02_App/01_View/Karte/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/01_View/Karte/LevelChangeDisplay/main.tex
@@ -2,13 +2,13 @@
 \paragraph*{Typ}
 Composable.
 \paragraph*{Beschreibung}
-Diese Klasse stellt über Compose eine Schaltfläche zum wechseln der angezeigten Etage bereit.\\
+Diese Klasse stellt über Compose eine Schaltfläche zum Wechseln der angezeigten Etage bereit.\\
 Die Schaltfläche besteht aus:
 \begin{itemize}
-    \item Einem Button zum wechseln der Etage nach oben.
+    \item Einem Button zum Wechseln der Etage nach oben.
     \item Einer Textanzeige, die die Etagennummer der aktuell angezeigten Etage anzeigt 
     (z.B. \dq1. OG\dq, \dqEG\dq, \dq1. UG\dq. usw.)
-    \item Einem Button zum wechseln der Etage nach unten.
+    \item Einem Button zum Wechseln der Etage nach unten.
 \end{itemize}
 Die Klasse ist ein Beobachter eines LevelChangeControllers. Dadurch erhält das 
 LevelChangeDisplay die Informationen zur aktuellen Etage. Wird einer der Buttons zum 
@@ -17,7 +17,7 @@ die sich um den Etagenwechsel kümmert.
 
 \subsubsection{onClickUp}%$$$M
 \paragraph*{Kurzbeschreibung}
-Veranlasst das den Etagenwechsel nach oben.
+Veranlasst den Etagenwechsel nach oben.
 \paragraph*{Beschreibung}
 Diese Methode wird aufgerufen, wenn der Button nach oben geklickt wurde. \\
 Wenn bereits die oberste Etage angezeigt wird passiert nichts. 
@@ -30,7 +30,7 @@ Void.
 
 \subsubsection{onClickDown}%$$$M
 \paragraph*{Kurzbeschreibung}
-Veranlasst das den Etagenwechsel nach unten.
+Veranlasst den Etagenwechsel nach unten.
 \paragraph*{Beschreibung}
 Diese Methode wird aufgerufen, wenn der Button nach unten geklickt wurde. \\
 Wenn bereits die unterste Etage angezeigt wird passiert nichts. 
