--- a/Kapitel/02_App/03_Model/DataUpdate/DataUpdateController/main.tex
+++ b/Kapitel/02_App/03_Model/DataUpdate/DataUpdateController/main.tex
@@ -15,7 +15,7 @@ Führt die Aktualiserung fort.
 \paragraph*{Beschreibung}
 Diese Methode kann dazu verwendet werden, eine fehlgeschlagene Aktualisierung fortzusetzen.\\
 Diese Methode führt alle DataUpdater in der Warteschlange aus.\\
-War das Aktualsieren eines DataUpdaters erfolgreich, wird er aus der Warteschlaneg entfernt.\\
+War das Aktualsieren eines DataUpdaters erfolgreich, wird er aus der Warteschlange entfernt.\\
 Schlägt ein DataUpdater fehl, werden nur noch alle DataUpdater mit gleicher Priorität 
 ausgeführt. Danach wird false zurückgegeben.\\
 Ist die Warteschlange leer, wird true zurückgegeben.\\
