Fixed as requested

--- a/Kapitel/02_App/01_View/Karte/MapScreen/main.tex
+++ b/Kapitel/02_App/01_View/Karte/MapScreen/main.tex
@@ -46,7 +46,8 @@ Folgende Interaktionen mit der Karte müssen aktiviert beziehungsweise sicherges
 Die Startposition der Karte ist beim Öffnen der App wie folgt definiert:
 \begin{itemize}
     \item Ist Standortzugriff aktiviert, wird der eigene Standort auf der Karte mittig angezeigt.
-    \item Sind keine Standortinformationen verfügbar, so wird die letzte bekannte Position angezeigt.
+    \item Sind keine Standortinformationen verfügbar, so wird die letzte Position angezeigt 
+    (bez. Default-Position, falls diese nicht existiert).
 \end{itemize}
 Um dieses Verhalten zu ermöglichen, muss dafür gesorgt werden, dass die letzte Position beim Verlassen 
 der App gespeichert wird.\\
