Added in Blacklist. Added Initiale Sortierung.

--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -29,6 +29,9 @@ Folgende Aufgaben werden erfüllt:
     \end{itemize}
 \end{itemize}
 
+\paragraph*{Initiale Sortierung}
+Absteigend nach den Alias-Vorschlägen
+
 \paragraph*{Desktop}
 \subparagraph*{Statischer Aufbau}
 Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt.
