--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -25,6 +25,9 @@ Folgende Aufgaben werden erfüllt:
     \end{itemize}
 \end{itemize}
 
+\paragraph*{Initiale Sortierung}
+Absteigend nach den Aliassen
+
 \paragraph*{Desktop}
 \subparagraph*{Statischer Aufbau}
 Die Seite ist unterteilt in zwei übereinanderliegende horizontale Boxen.
