--- a/Kapitel/02_App/01_View/Karte/DisplayData/main.tex
+++ b/Kapitel/02_App/01_View/Karte/DisplayData/main.tex
@@ -8,7 +8,7 @@ Karte benötigt werden. Dies sind insbesondere
     \item die MapId des Kartenobjekts.
 \end{itemize}
 
-\subsubsection{Konstruktor DisplayData}%$$$M
+\subsubsection{+ <<create>> DisplayData(latitude:double, longitude:double, name:String, mapId:int)}%$$$M
 \paragraph*{Beschreibung}
 Erstellt eine neue DisplayData-Instanz.
 \paragraph*{Parameter}
@@ -19,7 +19,7 @@ Erstellt eine neue DisplayData-Instanz.
     \item mapId:int MapId des Kartenobjekts.
 \end{itemize}
 
-\subsubsection{getPosition}%$$$M
+\subsubsection{+ getPosition():IGeoPoint}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Position auf der Karte zurück.
 \paragraph*{Parameter}
@@ -27,7 +27,7 @@ Keine.
 \paragraph*{Rückgabewert}
 IGeoPoint mit den Koordinaten.
 
-\subsubsection{getName}%$$$M
+\subsubsection{+ getName():String}%$$$M
 \paragraph*{Beschreibung}
 Gibt den Anzeigenamen zurück.
 \paragraph*{Parameter}
@@ -35,7 +35,7 @@ Keine.
 \paragraph*{Rückgabewert}
 String mit Anzeigenamen.
 
-\subsubsection{getMapId}%$$$M
+\subsubsection{+ getMapId():int}%$$$M
 \paragraph*{Beschreibung}
 Gibt die MapId des Kartenobjekts zurück.
 \paragraph*{Parameter}
