Added texttt-tag to map methods

--- a/Kapitel/02_App/02_ViewModel/LevelChangeController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/LevelChangeController/main.tex
@@ -8,7 +8,7 @@ Das Interfaces stellt Informationen wie welche Etage gerade angezeigt wird berei
 Dazu kann sie von einem Beobachter beobachtet werden. Hierzu werden LiveData-Objekte verwendet.\\
 Es stehen Methoden zum Wechseln der Etage bereit.\\
 
-\subsubsection{+ changeLevelUp()}%$$$M
+\subsubsection{\texttt{+ changeLevelUp()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Wechselt eine Etage nach oben.
 \paragraph*{Beschreibung}
@@ -20,7 +20,7 @@ Keine.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{+ changeLevelDown()}%$$$M
+\subsubsection{\texttt{+ changeLevelDown()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Wechselt eine Etage nach unten.
 \paragraph*{Beschreibung}
@@ -32,7 +32,7 @@ Keine.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{+ isHighestLevel() : LiveData<boolean>}%$$$M
+\subsubsection{\texttt{+ isHighestLevel() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt an, ob die aktuelle Etage die oberste Etage im Gebäude ist.
 \paragraph*{Parameter}
@@ -40,7 +40,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<boolean>, ob die aktuelle Etage die oberste Etage im Gebäude ist.
 
-\subsubsection{+ isLowestLevel() : LiveData<boolean>}%$$$M
+\subsubsection{\texttt{+ isLowestLevel() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt an, ob die aktuelle Etage die unterste Etage im Gebäude ist.
 \paragraph*{Parameter}
@@ -48,7 +48,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<boolean>, ob die aktuelle Etage die unterste Etage im Gebäude ist.
 
-\subsubsection{+ getLevel() : LiveData<int>}%$$$M
+\subsubsection{\texttt{+ getLevel() : LiveData<int>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Nummer der aktuellen Etage zurück.
 \paragraph*{Beschreibung}
@@ -60,7 +60,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<int>, Nummer der aktuellen Etage.
 
-\subsubsection{+ isLevelMode() : LiveData<boolean>}%$$$M
+\subsubsection{\texttt{+ isLevelMode() : LiveData<boolean>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt zurück, ob sich die Karte gerade im Etagenmodus befindet.
 \paragraph*{Parameter}
