--- a/Kapitel/02_App/03_Model/DataUpdate/DataUpdateController/main.tex
+++ b/Kapitel/02_App/03_Model/DataUpdate/DataUpdateController/main.tex
@@ -9,7 +9,7 @@ Es gibt eine Warteschlange von DataUpdatern, in der die Priorität der Schlüsse
 die Priorität, desto früher kommt ein DataUpdater dran). Initial ist die Warteschlange leer.\\
 
 
-\subsubsection{+ resumeUpdate() : boolean}%$$$M
+\subsubsection{\texttt{+ resumeUpdate() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Führt die Aktualiserung fort.
 \paragraph*{Beschreibung}
@@ -24,7 +24,7 @@ Keine.
 \paragraph*{Rückgabewert}
 boolean, ob die Aktualisierung erfolgreich war.
 
-\subsubsection{+ updateDatabase() : boolean}%$$$M
+\subsubsection{\texttt{+ updateDatabase() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Aktualisiert die lokale Datenbank komplett.
 \paragraph*{Beschreibung}
