--- a/Kapitel/02_App/03_Model/DataUpdate/DataUpdater/main.tex
+++ b/Kapitel/02_App/03_Model/DataUpdate/DataUpdater/main.tex
@@ -9,7 +9,7 @@ ausgeführt werden. DataUpdater mit gleicher Priorität sind voneinander unabhä
 die Reihenfolge ihrer Ausführung ist egal.\\
 Da sich die Aktualisierung je nach Datentyp unterscheidet, wird hier eine Strategie benutzt.
 
-\subsubsection{+ getPriority() : int}%$$$M
+\subsubsection{\texttt{+ getPriority() : int}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Priorität zurück.
 \paragraph*{Beschreibung}
@@ -21,7 +21,7 @@ Keine.
 \paragraph*{Rückgabewert}
 int, Priorität des DataUpdaters.
 
-\subsubsection{+ updateData() : boolean}%$$$M
+\subsubsection{\texttt{+ updateData() : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Führt die Aktualisierung der Daten durch.
 \paragraph*{Beschreibung}
