--- a/Kapitel/02_App/01_View/Karte/LevelChangeDisplay/main.tex
+++ b/Kapitel/02_App/01_View/Karte/LevelChangeDisplay/main.tex
@@ -15,7 +15,7 @@ LevelChangeDisplay die Informationen zur aktuellen Etage. Wird einer der Buttons
 Wechseln der Etage betätigt, meldet diese Klasse dies dem LevelChangeController, 
 die sich um den Etagenwechsel kümmert.
 
-\subsubsection{+ onClickUp()}%$$$M
+\subsubsection{\texttt{+ onClickUp()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst den Etagenwechsel nach oben.
 \paragraph*{Beschreibung}
@@ -28,7 +28,7 @@ Keine.
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{+ onClickDown()}%$$$M
+\subsubsection{\texttt{+ onClickDown()}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Veranlasst den Etagenwechsel nach unten.
 \paragraph*{Beschreibung}
