--- a/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
+++ b/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
@@ -17,7 +17,7 @@ Für die Verwaltung dieser Overlays wird das FolderOverlay eingesetzt.\\
 Diese Klasse verwaltet die MapObjectMarker, die Aktion beim Klicken auf diese Marker, 
 und das Fokussieren eines dieser Marker.
 
-\subsubsection{+ <<create>> TileMarkerOverlay(controller : MapLayerDataController)}%$$$M
+\subsubsection{\texttt{+ <<create>> TileMarkerOverlay(controller : MapLayerDataController)}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erstellt eine TileMarkerOverlay-Instanz.
 \paragraph*{Beschreibung}
@@ -41,7 +41,7 @@ an die FolderOverlay-Instanz delegiert:
     \item onDetach(mapView:MapView)
 \end{itemize}
 
-\subsubsection{+ onMarkerTap(mapId : int)}%$$$M
+\subsubsection{\texttt{+ onMarkerTap(mapId : int)}}%$$$M
 \paragraph*{Beschreibung}
 Teilt dem MapLayerDataController mit, dass ein bestimmtes Kartenobjekt ausgewählt wurde.
 \paragraph*{Parameter}
@@ -51,7 +51,7 @@ Teilt dem MapLayerDataController mit, dass ein bestimmtes Kartenobjekt ausgewäh
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{# createMarker(data : DisplayData) : MapObjectMarker {abstract}}%$$$M
+\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker {abstract}}}%$$$M
 \paragraph*{Beschreibung}
 Dies ist eine Fabrikmethode zur Erzeugung eines MapObjectMarker.
 \paragraph*{Parameter}
@@ -80,7 +80,7 @@ Erbt von TileMarkerOverlay.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein TileMarkerOverlay für die Gebäudeebene auf der Karte.
 
-\subsubsection{# createMarker(data : DisplayData) : MapObjectMarker}%$$$M
+\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen BuildingMarker mit den gegeben Daten.
 \paragraph*{Beschreibung}
@@ -93,7 +93,7 @@ Die Fabrikmethode zur Erzeugung eines Markers wird hier mit einem BuildingMarker
 \paragraph*{Rückgabewert}
 MapObjectMarker, erzeugter MapObjectMarker.
 
-\subsubsection{Weitere Implementierungen}%$$$M
+\subsubsection{\texttt{Weitere Implementierungen}}%$$$M
 Benutzt den von TileMarkerOverlay geerbten Konstruktor.
 
 %-------------------------------------------------------------
@@ -103,7 +103,7 @@ Erbt von TileMarkerOverlay.
 \paragraph*{Beschreibung}
 Diese Klasse ist ein TileMarkerOverlay für die Etagenebene auf der Karte.
 
-\subsubsection{# createMarker(data : DisplayData) : MapObjectMarker}%$$$M
+\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Erzeugt einen RoomMarker mit den gegeben Daten.
 \paragraph*{Beschreibung}
