Fix typos in 'loadUserByToken_String_User' of 'UserServiceImp'

--- a/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
@@ -1,6 +1,6 @@
 \paragraph{\texttt{loadUserByToken(accessToken : String) : User}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Ladet den gewünschten Benutzer durch einen Access-Token und gibt ihm anschließend zurück.
+Lädt den gewünschten Benutzer durch einen Access-Token und gibt ihn anschließend zurück.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{UserService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
