Added missing latex tags for {abstract}

--- a/Kapitel/02_App/01_View/Karte/Marker/main.tex
+++ b/Kapitel/02_App/01_View/Karte/Marker/main.tex
@@ -38,7 +38,7 @@ Für die Verarbeitung werden beide Parameter nicht benutzt. Diese sind durch Ove
 \paragraph*{Rückgabewert}
 boolean, gibt true zurück, da das MotionEvent verarbeitet wurde.
 
-\subsubsection{\texttt{+ focusMarkerObject(floorMapExists : boolean) {abstract}}}%$$$M
+\subsubsection{\texttt{+ focusMarkerObject(floorMapExists : boolean) $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt fokussiert wird.
 \paragraph*{Parameter}
@@ -48,7 +48,7 @@ Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt f
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{+ resetFocus() {abstract}}}%$$$M
+\subsubsection{\texttt{+ resetFocus() $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Setzt das Aussehen des Markers zurück, wenn er nicht mehr fokussiert wird.
 \paragraph*{Parameter}
