--- a/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
+++ b/Kapitel/02_App/01_View/Karte/TileMarkerOverlay/main.tex
@@ -51,7 +51,7 @@ Teilt dem MapLayerDataController mit, dass ein bestimmtes Kartenobjekt ausgewäh
 \paragraph*{Rückgabewert}
 Void.
 
-\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker {abstract}}}%$$$M
+\subsubsection{\texttt{# createMarker(data : DisplayData) : MapObjectMarker $\lbrace$abstract$\rbrace$}}%$$$M
 \paragraph*{Beschreibung}
 Dies ist eine Fabrikmethode zur Erzeugung eines MapObjectMarker.
 \paragraph*{Parameter}
