--- a/Kapitel/02_App/03_Model/MapDataProvider/main.tex
+++ b/Kapitel/02_App/03_Model/MapDataProvider/main.tex
@@ -4,7 +4,7 @@ Interface.
 \paragraph*{Beschreibung}
 Dieses Interface beschreibt die Schnittstelle von Model um Kartendaten anzufordern und zu speichern.
 
-\subsubsection{+getRoomDisplayData(mapId:int, level:int):LiveData<List<DisplayData>>}%$$$M
+\subsubsection{\texttt{+ getRoomDisplayData(mapId : int, level : int) : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die Anzeigedaten für Räume einer Etage zurück.
 \paragraph*{Beschreibung}
@@ -12,13 +12,13 @@ Gibt DisplayData-Objekte zu allen Räumen einer Etage eines Gebäudes zurück.\\
 Die Liste ist leer, wenn es keine hinterlegten Räume gibt.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item mapId:int MapId des Gebäudes.
-    \item level:int Stockwerk.
+    \item mapId : int MapId des Gebäudes.
+    \item level : int Stockwerk.
 \end{itemize}
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für Räume einer Etage.
 
-\subsubsection{+getBuildingDisplayData():LiveData<List<DisplayData>>}%$$$M
+\subsubsection{\texttt{+ getBuildingDisplayData() : LiveData<List<DisplayData>>}}%$$$M
 \paragraph*{Beschreibung}
 Gibt die Anzeigedaten für alle Gebäude zurück.
 \paragraph*{Parameter}
@@ -26,7 +26,7 @@ Keine.
 \paragraph*{Rückgabewert}
 LiveData<List<DisplayData>>, DisplayData für alle Gebäude.
 
-\subsubsection{+getLastSavedPosition():IGeoPoint}%$$$M
+\subsubsection{\texttt{+ getLastSavedPosition() : IGeoPoint}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt die letzte gespeicherte Position zurück.
 \paragraph*{Beschreibung}
@@ -37,12 +37,12 @@ Keine.
 \paragraph*{Rückgabewert}
 IGeoPoint mit letzter gespeicherter Position (oder Default-Wert), ist nie null.
 
-\subsubsection{+savePosition(pos:IGeoPoint)}%$$$M
+\subsubsection{\texttt{+ savePosition(pos : IGeoPoint)}}%$$$M
 \paragraph*{Beschreibung}
 Speichert eine Position als letzte Position.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item pos:IGeoPoint zu speichernde Position.
+    \item pos : IGeoPoint zu speichernde Position.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void.
