--- a/Kapitel/00_Backend/Services/AliasService/getAlias_int,UserID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasService/getAlias_int,UserID_ListAlias/main.tex
@@ -1,6 +1,6 @@
 \paragraph{\texttt{getAlias(mapID : int, userID : UserID) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben, und gibt es wiederum zurück.
+Definiert das Erteilen der Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
