--- a/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int,UserID_ListAlias/main.tex
+++ b/Kapitel/00_Backend/Services/AliasServiceImp/getAlias_int,UserID_ListAlias/main.tex
@@ -1,6 +1,6 @@
 \paragraph{\texttt{getAlias(mapID : int, userID : UserID) : List<Alias> aliases}}%$$$M
 \paragraph*{Kurzbeschreibung}
-Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben, und gibt es wiederum zurück.
+Erteilt die Anweisung an Klasse \texttt{AliasRepository}, eine Liste der Aliasse des gewünschten Kartenobjekts, die ein bestimmter Benutzer ursprünglich vorgeschlagen hatte, zurückzugeben, und gibt diese wiederum zurück.
 \paragraph*{Beschreibung}
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{AliasService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
