Fix javadoc for method 'loadUserByToken_String_User'
Fix javadoc for method 'loadUserByToken_String_User'
in 'UserService', 'UserServiceImp'.

--- a/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserService/loadUserByToken_String_User/main.tex
@@ -4,7 +4,7 @@ Definiert das Laden eines gewünschten Benutzers durch einen Access-Token und da
 \paragraph*{Beschreibung}
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
-Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer erhalten kann. 
+Die Methode ermöglicht, dass durch Angabe des Access-Tokens der gewünschten Benutzer erhalten werden kann. 
 Ist der Access-Token ungültig, d.h. nicht von einem Benutzer, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
