--- a/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
+++ b/Kapitel/00_Backend/Services/UserServiceImp/loadUserByToken_String_User/main.tex
@@ -5,7 +5,7 @@ Lädt den gewünschten Benutzer durch einen Access-Token und gibt ihn anschließ
 Die Methode implementiert die gleichnamige Methode der Schnittstelle \texttt{UserService}.
 Die Methode ist serverintern und wird somit nicht explizit vom Administrator aufgerufen.
 Stattdessen wird die Methode von Methoden aus dem Paket \texttt{Resolvers} aufgerufen.
-Die Methode ermöglicht, dass ein Administrator durch Angabe des Access-Tokens den gewünschten Benutzer erhalten kann. 
+Die Methode ermöglicht, dass durch Angabe des Access-Tokens der gewünschte Benutzer erhalten werden kann. 
 Ist der Access-Token ungültig, d.h. nicht von einem Benutzer, wird \texttt{null} zurückgegeben.
 \paragraph*{Parameter}
 \begin{itemize}
