--- a/Kapitel/02_App/01_View/SearchInput/main.tex
+++ b/Kapitel/02_App/01_View/SearchInput/main.tex
@@ -5,7 +5,7 @@ die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages d
 indem er einen Vorschlag auswählt oder die Eingabe vollständig selbst vornimmt.
 Die Klasse gehört zu View.
 
-\subsection{getSearchInput}%$$$M
+\subsection{\texttt{+ getSearchInput() : String}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode ermöglicht Benutzereingaben und gibt einen gültigen Suchbegriff oder Null zurück.
 \paragraph*{Beschreibung}
@@ -16,7 +16,7 @@ Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlau
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-String Suchbegriff, den der Benutzer eingegeben hat
+String, Suchbegriff, den der Benutzer eingegeben hat
 \paragraph*{Notizen zur Implementierung}
 Benutzt eine Instanz von SearchView (https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
 Für das Durchsuchen der Daten wird getSuggestions von Search genutzt.
