--- a/Kapitel/02_App/02_ViewModel/SearchController/main.tex
+++ b/Kapitel/02_App/02_ViewModel/SearchController/main.tex
@@ -28,3 +28,27 @@ Diese Methode fordert das zu den Suchbegriffen gehörenden Kartenobjekt von dem 
 \end{itemize}
 \paragraph*{Rückgabewert}
 MapObject, Kartenobjekt zum Suchbegriff, die SearchModel zurückgegeben hat
+
+\subsection{\texttt{+ storeSearchKey(searchKey : String)}}%$$$M
+\paragraph*{Kurzbeschreibung}
+Diese Methode lässt den gegebenen Suchbegriff speichern.
+\paragraph*{Beschreibung}
+Diese Methode lässt den gegebenen Suchbegriff in der Datenbank speichern.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item searchKey : String
+\end{itemize}
+\paragraph*{Rückgabewert}
+keinen
+
+\subsection{\texttt{+ getLastSearchKeys() : List<String>}}%$$$M
+\paragraph*{Kurzbeschreibung}
+Diese Methode gibt die zuletzt gesuchten Suchbegriffe zurück.
+\paragraph*{Beschreibung}
+Diese Methode fordert die zuletzt gesuchten Suchbegriffe von dem SearchModel an und gibt diese zurück.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item keine
+\end{itemize}
+\paragraph*{Rückgabewert}
+List<String>, zuletzt gesuchte Suchbegriffe, die SearchModel zurückgegeben hat
